error handler used by middleware
- common NotFound response
- handler returns correct error code based on error
